# Concorde

./: .gitignore  README.md  build.sh  meson.build
backend/include/: sockapi.h
backend/src/: main.c  sockapi.c
backend/src/include/: sockapi.h
backend/src/sockapi/: sockapi.c
include/: conclient_logs.h  config.h  logging.h  netapi.h  sockapi.h
src/: logs.c  netapi.c  sockapi.c
src/client/: main.c
src/server/: main.c
